# allianceauth-pve

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: .env.example  Dockerfile  celery.py  devcontainer.json  docker-compose.yml  local.py  memory_check.sh  redis_healthcheck.sh  requirements.txt  setup.sql  urls.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: python-publish.yml  python-test.yml
.tx/: transifex.yml
allianceauth_pve/: __init__.py  actions.py  admin.py  app_settings.py  apps.py  auth_hooks.py  checks.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
allianceauth_pve/api/: __init__.py  activity.py  authenticators.py  entries.py  permissions.py  projects.py  rotations.py  schema.py  search.py
allianceauth_pve/locale/en/LC_MESSAGES/: django.po
allianceauth_pve/locale/it_IT/LC_MESSAGES/: django.mo  django.po
allianceauth_pve/management/commands/: pve_clear_cache.py
allianceauth_pve/migrations/: 0001_initial.py  0002_auto_20220409_1358.py  0003_auto_20220411_1104.py  0004_auto_20220411_2152.py  0005_rename_character_entrycharacter_user.py  0006_auto_20220416_1534.py  0007_alter_rotation_tax_rate.py  0008_auto_20220424_1435.py  0009_pvebutton_rotation_entry_buttons.py  0010_rolesetup_generalrole.py  0010_rolesetup_generalrole_rotation_entry_setups.py  0010_rolesetup_generalrole_rotation_roles_setups.py  0011_entryrole_unique_role_name_per_entry_and_more.py  0012_alter_entry_options_and_more.py  0013_alter_general_options_alter_rotation_entry_buttons_and_more.py  0013_alter_rotation_entry_buttons_and_more.py  0014_alter_general_options.py  0014_alter_rotation_priority.py  0015_alter_entry_estimated_total_alter_pvebutton_amount.py  0015_alter_entry_estimated_total_alter_pvebutton_amount_and_more.py  0016_alter_rotation_actual_total.py  0016_remove_entrycharacter_actual_share_total_and_more.py  0017_fundingproject_alter_general_options_and_more.py  0018_fundingproject_created_at.py  0019_fundingproject_completed_at.py  0020_alter_entrycharacter_user_and_more.py  0021_rotationpreset.py  0022_alter_entry_funding_percentage_and_more.py  0023_rotation_tax_rate_loot_items_entrylootitem.py  0024_rotationpreset_tax_rate_loot_items.py
allianceauth_pve/static/allianceauth_pve/css/: copy_text.css  custom_checkbox.css  double_table.css  new_entry_styles.css
allianceauth_pve/static/allianceauth_pve/js/: copy_text.js  localized_checkbox.js  new_entry_js.js
allianceauth_pve/static/css/: custom_checkbox.css  new_entry_styles.css
allianceauth_pve/static/js/: new_entry_js.js
allianceauth_pve/templates/allianceauth_pve/: base.html  entry_detail.html  entry_form.html  funding_project_create.html  fundingproject_detail.html  new_entry.html  ratting-dashboard.html  react_base.html  rotation.html  rotation_create.html  switch_frontend_version.html
allianceauth_pve/templatetags/: allianceauth_pve_versioned_static.py  pvefilters.py
allianceauth_pve/tests/: test_actions.py  test_admin.py  test_auth_hooks.py  test_forms.py  test_models.py  test_templatetags.py  test_url.py  test_urls.py  test_utils.py  test_views.py  utils.py
allianceauth_pve/tests/api/: test_activity.py  test_authenticators.py  test_entries.py  test_general_and_perms.py  test_projects.py  test_rotations.py  test_search.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
frontend/: copy-assets.sh  copy-langs.sh  eslint.config.js  i18next.config.ts  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/i18n/cs/: translation.json
frontend/i18n/de/: translation.json
frontend/i18n/en/: translation.json
frontend/i18n/it-IT/: translation.json
frontend/i18n/ko-KR/: translation.json
frontend/i18n/uk/: translation.json
frontend/src/: App.tsx  main.tsx  storageManager.ts  utils.ts
frontend/src/@types/: i18next.d.ts  resources.ts
frontend/src/api/: ApiClient.ts  Schema.d.ts  api.ts
frontend/src/components/: CharacterWithPortrait.tsx  Loading.tsx  NavBackButton.tsx  StatCards.tsx
frontend/src/components/dashboard/: ActivitySection.tsx  Dashboard.tsx  ProjectsSection.tsx  RotationsSection.tsx
frontend/src/components/entries/: EntryDetails.tsx  EntryInfo.tsx  EntryItems.tsx  EntryRoles.tsx  EntryShares.tsx  EntryTypes.ts  HelpedSetupStyles.css  HelpedSetupSytels.css  NewEntryForm.tsx
frontend/src/components/entries/entry_form/: AddCharacterSectionStyles.css  AddCharactersSection.tsx  EditEntryForm.tsx  EntryForm.tsx  EntryFormStyles.css  FundingProjectSection.tsx  IncrementTotalSection.tsx  ItemSection.tsx  LoadRoleSetupsModal.tsx  NewEntryForm.tsx  NewRoleForm.tsx  RolesSection.tsx  RolesSectionStyles.css  ShareSectionStyles.css  SharesSection.tsx  TotalSection.tsx
frontend/src/components/projects/: NewProjectForm.tsx  ProjectContributions.tsx  ProjectDetails.tsx  ProjectInfo.tsx
frontend/src/components/rotations/: CloseRotationSection.tsx  NewRotationForm.tsx  RotationDetails.tsx  RotationEntriesSection.tsx  RotationSummarySection.tsx
frontend/src/components/summary/: ItemSummary.tsx  SummaryStyles.css  SummaryTable.tsx
frontend/src/components/tables/: DataTables.css  DataTablesBase.tsx
frontend/src/components/utils/: CharacterWithPortrait.tsx  ErrorPage.tsx  Loading.tsx  StatCards.tsx  TimeAgo.tsx  TooltipComponent.tsx
frontend/src/hooks/: debounceHook.ts  useLocalStorageReducer.ts
frontend/src/providers/: EntryFormProvider.tsx  PermissionsProvider.tsx  ToastProvider.tsx
testauth/: celery.py  settings.py
testauth/settings/: base.py  local.py
tests/: __init__.py  test_allianceauth_pve.py
