[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "allianceauth-pve"
dynamic = ["version"]
authors = [
    {name = "Matteo Ghia", email = "matteo.ghia@yahoo.it"},
]
classifiers = [
    "Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 4",
	"Framework :: Django :: 4.2",
	"Operating System :: POSIX :: Linux",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
description = "PvE tool for AllianceAuth"
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
	"allianceauth_pve",
]
requires-python = "~=3.8"
dependencies = [
    "allianceauth~=4.0",
]

[project.urls]
Homepage = "https://github.com/Maestro-Zacht/allianceauth-pve"
Source = "https://github.com/Maestro-Zacht/allianceauth-pve"
Tracker = "https://github.com/Maestro-Zacht/allianceauth-pve/issues"
Changelog = "https://github.com/Maestro-Zacht/allianceauth-pve/releases"

[tool.flit.module]
name = "allianceauth_pve"

