[bumpversion]
current_version = 1.12.1
commit = True
tag = True
sign_tags = True

[metadata]
name = allianceauth_pve
version = attr: allianceauth_pve.__version__
author_email = matteo.ghia@yahoo.it
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Operating System :: POSIX :: Linux
	Intended Audience :: Developers
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4
	Framework :: Django :: 4.0
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
description = PvE tool for AllianceAuth
license = GNU General Public License v3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	allianceauth_pve
	allianceauth
	eveonline
url = https://github.com/Maestro-Zacht/allianceauth-pve

[options]
packages = find:
python_requires = ~=3.8
install_requires = 
	allianceauth>=2.11.2,<4.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
include = allianceauth_pve*

[bumpversion:file:allianceauth_pve/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
